pkg/kgateway/translator/gateway/testutils/inputs/tcp-routing/invalid-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: example-tcp-route
spec:
  parentRefs:
  - name: example-gateway
  rules:
  - backendRefs:
    - name: example-tcp-svc
      port: 8080
      group: unknown
      kind: unknown
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: tcp
    protocol: TCP
    port: 8080
