pkg/kgateway/translator/gateway/testutils/inputs/tcp-routing/tls-multiple-certificates.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: tls
    protocol: TLS
    port: 8443
    tls:
      mode: Terminate
      certificateRefs:
        - name: tls-rsa
          kind: Secret
        - name: tls-ecdsa
          kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: example-route
spec:
  parentRefs:
  - name: example-gateway
  rules:
  - backendRefs:
    - name: example-svc
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: test
